<resources>
    <string name="app_name">homework3</string>
    <string name="profile_info">Profile Info</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="error_message">Something is filled out incorrectly!</string>
</resources>