<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_blue"
    android:padding="20dp"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="23dp"
        android:text="@string/profile_info"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/username" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/first_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/last_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/age" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@color/pink"
        android:text="@string/save" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="-47dp"
        android:background="@color/pink"
        android:text="@string/clear" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="23dp"
        android:text="@string/error_message"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="invisible" />

</androidx.appcompat.widget.LinearLayoutCompat>